<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/AppLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <TextView
            android:id="@+id/PrincipleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/principle_label"

            />

        <EditText
            android:id="@+id/PrincipleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_vertical_margin"
            android:hint="@string/principle_hint"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/InterestLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate_label" />

        <SeekBar
            android:id="@+id/InterestSeekBar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:progress="50"
            />

        <TextView
            android:id="@+id/LoanTermLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_term_label" />
        <RadioGroup
            android:id="@+id/loanTermRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/firstRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_label"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/secondRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_label"/>
            <RadioButton
                android:id="@+id/thirdRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_label"/>
        </RadioGroup>
        <TextView
            android:id="@+id/TaxLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_insurance_label" />

        <CheckBox
            android:id="@+id/chkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_checkbox_label" />

        <Button
            android:id="@+id/calcBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_label" />

        <TextView
            android:id="@+id/MonthlyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_payment_label" />

    </LinearLayout>
</RelativeLayout>
